test/types/file/bradc/changeFilenameWhileOpen.good
changeFilenameWhileOpen.chpl:4: error: halt reached - Cannot change filename of file ./f.out while it is open
